force-app/main/default/objects/User/fields/CurrentLocation__c.field-meta.xml
<CustomField>
    <fullName>CurrentLocation__c</fullName>
    <label>Current Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fairfax</fullName>
            </value>
            <value>
                <fullName>SPS</fullName>
            </value>
            <value>
                <fullName>Reston</fullName>
            </value>
            <value>
                <fullName>UTA-ERB</fullName>
            </value>
            <value>
                <fullName>USF-NEC</fullName>
            </value>
            <value>
                <fullName>ASU</fullName>
            </value>
            <value>
                <fullName>WVU-CBE</fullName>
            </value>
            <value>
                <fullName>Queens</fullName>
            </value>
            <value>
                <fullName>USF-SOC</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>USF-BSN</fullName>
            </value>
            <value>
                <fullName>UTA-PRS</fullName>
            </value>
            <value>
                <fullName>UTA-K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>