force-app/main/default/objects/User/fields/hasSkill__c.field-meta.xml
<CustomField>
    <fullName>hasSkill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasSkill</label>
    <type>Checkbox</type>
</CustomField>