force-app/main/default/objects/User/fields/Training_Skills__c.field-meta.xml
<CustomField>
    <fullName>Training_Skills__c</fullName>
    <description>Contains Training Tracks that the trainer has experience training. When a trainer completes a batch that has a Training Track they had previously not trained, their Training Skills list should be updated to include the new Training Track value.</description>
    <label>Training Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Training_Tracks</valueSetName>
    </valueSet>
</CustomField>